css/styles.css
 /* Global Styles
--------------------------*/

html {
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    background: #ccfccb;
    color: #2D2D2A;
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
}

a { 
    color: #464E47; 
    text-decoration: none;
}

ul {
    list-style-type: none;
}

h1, h2, h6 {
    font-family: 'Caveat', cursive;
    font-size: 2.5em;
}

.content-wrap {
    width: 1400px;
    margin: 0 auto;
    padding: 60px 0;
}

.header {
    background: #568259; 
    color: #F1FFFA;
}

.header h1,h4{
    text-align: center;
}

.header img {
    text-align: center;
}

.h1-title {
    padding: 25px;
    margin: 0 auto;
    text-align: center;
}

.title {
    position: relative;
    bottom: 200px;
}

.banner-img {
    width: 800px;
    display: block;
}

.hero-shot {
    position: relative;
    bottom: 200px;

}

a:visited { 
    color: #551a8b;
    text-decoration: none;
}

a:hover { 
    color: #06e;
    text-decoration: none;
}

a:hover {
    text-decoration: none;
}




/* Body Styles
--------------------------*/

.grid-container {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 50% 50%;
    padding-left: 50px;
    text-align: center;
    column-gap: 20px;
}

.main {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 2;
}

.sidebar {
    background: lightblue;
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 6;
}

.sidebar a {
    position: relative;
}

.article-pictures {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-auto-flow: row dense;
}

.article-details {
}

/* Footer Styles
--------------------------*/
footer {
    background: #96E6B3;
    color: #2D2D2A;
    text-align: left;
    margin: 0;
    padding: 0;

}

